# rain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_shaders.bat  generate_solution.bat  open_shaders.bat  open_worlds.bat  post_build.ps1  resourcessdlfkj.json  todo.txt
data/new_cmake_architecture/: CMakeLists.txt
data/new_cmake_architecture/src/: CMakeLists.txt
data/new_cmake_architecture/src/core/: CMakeLists.txt
data/new_cmake_architecture/src/engine/: CMakeLists.txt
data/new_cmake_architecture/src/network/: CMakeLists.txt
data/new_cmake_architecture/src/server/: CMakeLists.txt
data/new_cmake_architecture/src/thread/: CMakeLists.txt
server/: CMakeLists.txt
server/src/: application.cpp
src/: CMakeLists.txt  camera_controller.cpp  camera_controller.h  main.cpp  rain.cpp  rain.h  win32_graphics.cpp  win32_graphics.h
src/assert/: rain_assert.cpp  rain_assert.h
src/core/: CMakeLists.txt  bitmask.cpp  bitmask.h  component.cpp  component.h  config.cpp  config.h  core.h  data_indexer.cpp  data_indexer.h  entity.cpp  entity.h  entity.inl  event.cpp  event.h  file.cpp  file.h  file_path.cpp  file_path.h  file_system.cpp  file_system.h  game_engine.cpp  game_engine.h  game_object.h  high_resolution_clock.cpp  high_resolution_clock.h  id_generator.cpp  id_generator.h  input.cpp  input.h  json_reader.cpp  json_reader.h  log.cpp  log.h  logger.cpp  logger.h  math.h  memory.h  singleton.h  sparse_set.h  (+12 more)
src/core/containers/: vector.h  vector.inl  vector_defaults.cpp  vector_defaults.h
src/core/core/: bit_operations.h  core.h  data_system.cpp  data_system.h  file.cpp  file.h  file_path.cpp  file_path.h  heterogenous_vector.h  high_resolution_clock.cpp  high_resolution_clock.h  id_generator.cpp  id_generator.h  logger.cpp  logger.h  messaging.h  path.cpp  path.h  profiler.cpp  profiler.h  random.h  signal.h  singleton.h  sparse_set.cpp  sparse_set.h  string.cpp  string.h  type_id.h  types.h  uuid.cpp  uuid.h
src/core/core/math/: float.cpp  float.h  math.h  math_basics.h  matrix.h  plane.h  quad.h  quick_hull.cpp  quick_hull.h  ray.h  simplex_noise.cpp  simplex_noise.h  sphere.h  transform.cpp  transform.h  vector.cpp  vector.h  voxel_triangulation.h
src/core/core/memory/: linear_allocator.cpp  linear_allocator.h  memory.h  memory_utility.cpp  memory_utility.h  pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
src/core/core/network/: network.cpp  network.h  packet.h  tcp_server.h
src/core/core/profile/: profiler.cpp
src/core/core/rtti/: rtti.cpp  rtti.h  rtti_object.cpp  rtti_object.h
src/core/core/scene_managment/: actor.cpp  actor.h  component.cpp  component.h
src/core/core/voxel/: block.h  (+4 more)
src/core/src/: core.h
src/data/: data_system.cpp  data_system.h  json_helpers.h
src/data/geometry/: mesh.cpp  mesh.h
src/dx12/: win32_application.cpp  win32_application.h  win32_command_queue.cpp  win32_command_queue.h  win32_dx12.h  win32_functional.cpp  win32_functional.h  win32_game.cpp  win32_game.h  win32_helpers.h  win32_main.cpp  win32_tutorial.cpp  win32_tutorial.h  win32_window.cpp  win32_window.h
src/ecs/: component.cpp  component.h  ecs.h  ecs_component.cpp  ecs_component.h  ecs_entity.cpp  ecs_entity.h  ecs_entity_container.cpp  ecs_entity_container.h  ecs_pool.h  ecs_registry.h  ecs_sparse_set.h  ecs_system.cpp  ecs_system.h  ecs_test.cpp  ecs_test.h  entity.cpp  entity.h  entity.inl  system_transform.cpp  system_transform.h
src/ecs/components/: name.cpp  name.h  physics.cpp  physics.h
src/engine/: CMakeLists.txt
src/engine/engine/: application_win32.cpp  main.cpp
src/game/: world.cpp  world.h
src/gameplay/scripts/: camera_movement.h
src/gfx/: gfx.h  gfx_camera.cpp  gfx_camera.h  gfx_graphics.cpp  gfx_graphics.h  gfx_light.cpp  gfx_light.h  gfx_material.cpp  gfx_material.h  gfx_mesh.cpp  gfx_mesh.h  gfx_model.cpp  gfx_model.h  gfx_rendere.h  gfx_renderer.cpp  gfx_renderer.h  gfx_shader.cpp  gfx_shader.h  gfx_texture.cpp  gfx_texture.h  gfx_volumes.cpp  gfx_volumes.h  mesh.cpp  mesh.h
src/gfx/dx12/: dx12_sandbox.cpp  dx12_sandbox.h
src/gfx/ogl/: ogl_application.cpp  ogl_application.h  ogl_debug.cpp  ogl_debug.h  ogl_renderer.cpp  ogl_renderer.h  ogl_sandbox.cpp  ogl_sandbox.h  ogl_shader.cpp  ogl_shader.h  ogl_window.cpp  ogl_window.h
src/gfx/opengl/: opengl_sandbox.cpp  opengl_sandbox.h
src/graphics/: camera.cpp  camera.h  graphics.cpp  graphics.h  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
src/input/: input.cpp  input.h  input_engine.cpp  input_engine.h
src/math/: CMakeLists.txt  math_basics.h  matrix.h  transform.cpp  transform.h  vector.cpp  vector.h
src/math/math/: math.h
src/memory/: mem_resource_manager.cpp  mem_resource_manager.h
src/network/: client.cpp  client.h
src/ogl/: ogl_renderer.cpp  ogl_renderer.h
src/opengl/: sandbox.cpp  sandbox.h
src/physics/: collision.cpp  collision.h  physics.cpp  physics.h  rigid_body.cpp  rigid_body.h  spring.h
src/scene/: sc_scene.cpp  sc_scene.h
src/serializer/: archivist.cpp  archivist.h  archivist_binary.cpp  archivist_binary.h  archivist_json.cpp  archivist_json.h  pupper.cpp  pupper.h  pupper_binary.cpp  pupper_binary.h  pupper_json.cpp  pupper_json.h  var_info.h
src/server/: CMakeLists.txt
src/server/server/: server.cpp  server.h
src/server/src/: server.cpp
src/test/: ecs_test.cpp  ecs_test.h  physics_test.h  test.cpp  test.h  vector_test.cpp  vector_test.h
src/utility/: first_time_mcr.h  gl_utils.cpp  gl_utils.h  json_utils.h  mesh.h  stdincl_3d.h  string_utils.cpp  string_utils.h  utility.h
src/win32/: d3dx12.h  win32_application.cpp  win32_application.h  win32_command_queue.cpp  win32_event.h  win32_functional.cpp  win32_functional.h  win32_game.cpp  win32_game.h  win32_graphics.cpp  win32_helper.h  win32_helpers.h  win32_high_definition_clock.cpp  win32_high_resolution_clock.cpp  win32_input.cpp  win32_input.h  win32_main.cpp  win32_output.cpp  win32_output.h  win32_tutorial.cpp  win32_tutorial.h  win32_window.cpp  win32_window.h
(+426 files in other folders)
